config the project to use mysql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,24 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
-spring.datasource.username= postgres
-spring.datasource.password= 123
+#spring.datasource.url= jdbc:postgresql://localhost:5432/testdb
+#spring.datasource.username= postgres
+#spring.datasource.password= 123
 
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto= update
+#spring.jpa.hibernate.ddl-auto= update
+
+### mysql config
+spring.datasource.name=jwtdb
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/jwtdb?useUnicode=true&zeroDateTimeBehavior=convertToNull&autoReconnect=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Binbin0816
+
+### datasoruce for mybatis connection to mysql
+spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
